--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,9 @@
 [tox]
-envlist = py37,py38,p739
+envlist = py38,p739
 skip_missing_interpreters = True
 
 [testenv]
 basepython =
-    py37: python3.7
     py38: python3.8
     py39: python3.9
 install_command =
