--- a/.github/workflows/build-branch.yml
+++ b/.github/workflows/build-branch.yml
@@ -3,7 +3,7 @@ name: Build-Branch
 on:
   push:
     branches-ignore:
-      - master
+      - main
     paths-ignore:
       - '**.json'
       - '**.md'
