--- a/.github/workflows/build-branch.yml
+++ b/.github/workflows/build-branch.yml
@@ -3,7 +3,7 @@ name: Build-Branch
 on:
   push:
     branches-ignore:
-      - master
+      - main
     paths-ignore:
       - '**.json'
       - '**.md'
@@ -41,7 +41,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip virtualenv setuptools
           pip install -r requirements-build.txt
-          black --line-length=79 module/
 
       - id: ToxSetting
         run: |
