Minor reformat for max-line-length

--- a/tox.ini
+++ b/tox.ini
@@ -36,6 +36,11 @@ norecursedirs = env .tox
 # fail on XPASS
 xfail_strict = true
 
+[flake8]
+exclude = */tests/*
+ignore = E226,E302,E41
+max-line-length = 120
+
 # Inline coverage config
 [run]
 omit =
