--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 [tox]
-envlist = py38,p739
+envlist = py38,py39,py310
 skip_missing_interpreters = True
 
 [testenv]
 basepython =
     py38: python3.8
     py39: python3.9
+    py310: python3.10
 install_command =
     python -m pip install {opts} {packages} -cconstraints.txt
 deps =
@@ -18,7 +19,7 @@ commands =
     pip check
     python -m pytest --junit-xml "junit-{envname}.xml"
 
-[testenv:py38]
+[testenv:py39]
 commands =
     pip check
     python -m pytest --cov . --cov-config=tox.ini --cov-report xml:coverage-{envname}.xml --junit-xml "junit-{envname}.xml" saml2awsmulti
