--- a/.github/workflows/build-branch.yml
+++ b/.github/workflows/build-branch.yml
@@ -29,7 +29,7 @@ jobs:
         python-version: [3.9]
 
     steps:
-      - name: Checkout sources
+      - name: Checkout source
         uses: actions/checkout@v2
 
       - name: Set up Python ${{ matrix.python-version }}
@@ -51,7 +51,7 @@ jobs:
           then
             echo "::set-output name=toxenv::py39"
           else
-            echo "::set-output name=toxenv::py39"
+            echo "::set-output name=toxenv::py310"
           fi
 
       - name: Test with tox
