--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py38,py39,py310
+envlist = py38,py39,py310,py311
 skip_missing_interpreters = True
 
 [testenv]
@@ -7,6 +7,7 @@ basepython =
     py38: python3.8
     py39: python3.9
     py310: python3.10
+    py311: python3.11
 install_command =
     python -m pip install {opts} {packages} -cconstraints.txt
 deps =
@@ -14,12 +15,15 @@ deps =
 pip_pre = True
 passenv =
     CODECOV_TOKEN             # codecov
-    TOXENV CI TRAVIS TRAVIS_* # travis and codecov
+    TOXENV                    # travis and codecov
+    CI
+    TRAVIS
+    TRAVIS_*
 commands =
     pip check
     python -m pytest --junit-xml "junit-{envname}.xml"
 
-[testenv:py39]
+[testenv:py311]
 commands =
     pip check
     python -m pytest --cov . --cov-config=tox.ini --cov-report xml:coverage-{envname}.xml --junit-xml "junit-{envname}.xml" saml2awsmulti
