--- a/.github/workflows/build-branch.yml
+++ b/.github/workflows/build-branch.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.9]
+        python-version: [3.11]
 
     steps:
       - name: Checkout source
@@ -39,19 +39,25 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip virtualenv setuptools
+          python -m pip install --upgrade pip
           pip install -r requirements-build.txt
 
       - id: ToxSetting
         run: |
           if [[ "${{ matrix.python-version }}" == "3.8" ]]
           then
-            echo "::set-output name=toxenv::py38"
+            echo "toxenv=py38" >> $GITHUB_OUTPUT
           elif [[ "${{ matrix.python-version }}" == "3.9" ]]
           then
-            echo "::set-output name=toxenv::py39"
+            echo "toxenv=py39" >> $GITHUB_OUTPUT
+          elif [[ "${{ matrix.python-version }}" == "3.10" ]]
+          then
+            echo "toxenv=py310" >> $GITHUB_OUTPUT
+          elif [[ "${{ matrix.python-version }}" == "3.11" ]]
+          then
+            echo "toxenv=py311" >> $GITHUB_OUTPUT
           else
-            echo "::set-output name=toxenv::py310"
+            exit 1
           fi
 
       - name: Test with tox
