--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,9 +1,7 @@
-name: Build-Branch
+name: Build and Test
 
 on:
   push:
-    branches-ignore:
-      - main
     paths-ignore:
       - '**.json'
       - '**.md'
@@ -21,12 +19,33 @@ jobs:
       - name: Run yamllint
         run: yamllint -c .github/linters/.yaml-lint.yaml .github/
 
+  security:
+    name: Run Snyk to check for vulnerabilities
+    # if: ${{ github.ref == 'refs/heads/main' }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@master
+
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/python-3.8@master
+        continue-on-error: true  # To make sure that SARIF upload gets called
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --all-projects --severity-threshold=high --sarif-file-output=snyk.sarif
+
+      - name: Upload result to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: snyk.sarif
+
   build:
     needs: lint
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.11]
+        python-version: [3.8, 3.9, "3.10", 3.11]
 
     steps:
       - name: Checkout source
