Added Gitleaks, TruffleHug checks (#84)

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,9 +1,7 @@
-name: Build-Branch
+name: Build and Test
 
 on:
   push:
-    branches-ignore:
-      - main
     paths-ignore:
       - '**.json'
       - '**.md'
@@ -26,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.11]
+        python-version: [3.8, 3.9, "3.10", 3.11]
 
     steps:
       - name: Checkout source
