--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9, "3.10", 3.11]
+        python-version: [3.12, 3.11, "3.10"]
 
     steps:
       - name: Checkout source
@@ -42,18 +42,15 @@ jobs:
 
       - id: ToxSetting
         run: |
-          if [[ "${{ matrix.python-version }}" == "3.8" ]]
+          if [[ "${{ matrix.python-version }}" == "3.12" ]]
           then
-            echo "toxenv=py38" >> $GITHUB_OUTPUT
-          elif [[ "${{ matrix.python-version }}" == "3.9" ]]
-          then
-            echo "toxenv=py39" >> $GITHUB_OUTPUT
-          elif [[ "${{ matrix.python-version }}" == "3.10" ]]
-          then
-            echo "toxenv=py310" >> $GITHUB_OUTPUT
+            echo "toxenv=py312" >> $GITHUB_OUTPUT
           elif [[ "${{ matrix.python-version }}" == "3.11" ]]
           then
             echo "toxenv=py311" >> $GITHUB_OUTPUT
+          elif [[ "${{ matrix.python-version }}" == "3.10" ]]
+          then
+            echo "toxenv=py310" >> $GITHUB_OUTPUT
           else
             exit 1
           fi
