--- a/.github/workflows/secrets-scan.yml
+++ b/.github/workflows/secrets-scan.yml
@@ -14,7 +14,7 @@ jobs:
         uses: gitleaks/gitleaks-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE}}  # Only required for Organizations, not personal accounts
+          GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE }}  # Only required for Organizations, not personal accounts
 
   TruffleHog:
     name: TruffleHog Secrets Scan
@@ -27,6 +27,6 @@ jobs:
         uses: trufflesecurity/trufflehog@main
         with:
           path: ./
-          base: ${{ github.event.repository.default_branch }}
-          head: HEAD
+          # base: ${{ github.event.repository.default_branch }}
+          # head: HEAD
           extra_args: --debug --only-verified
