--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py310,py311,py312
+envlist = py310,py311,py312,py313
 skip_missing_interpreters = True
 
 [testenv]
@@ -7,22 +7,21 @@ basepython =
     py310: python3.10
     py311: python3.11
     py312: python3.12
+    py313: python3.13
 install_command =
     python -m pip install {opts} {packages} -cconstraints.txt
 deps =
     -rrequirements-test.txt
 pip_pre = True
 passenv =
-    CODECOV_TOKEN             # codecov
-    TOXENV                    # travis and codecov
+    CODECOV_TOKEN  # codecov
+    TOXENV         # codecov
     CI
-    TRAVIS
-    TRAVIS_*
 commands =
     pip check
     python -m pytest --junit-xml "junit-{envname}.xml"
 
-[testenv:py312]
+[testenv:py313]
 commands =
     pip check
     python -m pytest --cov . --cov-config=tox.ini --cov-report xml:coverage-{envname}.xml --junit-xml "junit-{envname}.xml" saml2awsmulti
