--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v5
       - name: Run yamllint
-        run: yamllint -c .github/linters/.yaml-lint.yaml .github/
+        run: make yamllint
 
   build:
     needs: lint
@@ -36,28 +36,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements-build.txt
+        run: make install-test-deps
 
-      - id: ToxSetting
+      - name: Run tests with Makefile
         run: |
-          if [[ "${{ matrix.python-version }}" == "3.13" ]]
-          then
-            echo "toxenv=py313" >> $GITHUB_OUTPUT
-          elif [[ "${{ matrix.python-version }}" == "3.12" ]]
-          then
-            echo "toxenv=py312" >> $GITHUB_OUTPUT
-          elif [[ "${{ matrix.python-version }}" == "3.11" ]]
-          then
-            echo "toxenv=py311" >> $GITHUB_OUTPUT
-          elif [[ "${{ matrix.python-version }}" == "3.10" ]]
-          then
-            echo "toxenv=py310" >> $GITHUB_OUTPUT
-          else
-            exit 1
-          fi
-
-      - name: Test with tox
-        run: |
-          tox -r -e ${{ steps.ToxSetting.outputs.toxenv }}
+          make test-coverage
