--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.13, 3.12, 3.11]
+        python-version: ["3.11", "3.12", "3.13"]
 
     steps:
       - name: Checkout source
@@ -42,6 +42,15 @@ jobs:
       - name: Install dependencies
         run: make install-test-deps
 
-      - name: Run tests with Makefile
-        run: |
-          make test-coverage
+      - name: Run tests with coverage
+        run: make test-coverage
+
+      - name: Upload coverage to Codecov
+        if: matrix.python-version == '3.13'
+        uses: codecov/codecov-action@v5
+        with:
+          file: ./coverage.xml
+          flags: unittests
+          name: codecov-umbrella
+          fail_ci_if_error: false
+          token: ${{ secrets.CODECOV_TOKEN }}
