Add yamllint to dev dependencies and update linting setup
Added yamllint as a development dependency in pyproject.toml and updated the Makefile and GitHub Actions workflow to use Poetry for installing and running yamllint. Also renamed the yamllint config file for consistency and made minor improvements to the linting process.

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -12,7 +12,7 @@ defaults:
 
 jobs:
   lint:
-    name: Run yamllint with common config
+    name: Run yamllint on workflows
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
@@ -20,6 +20,10 @@ jobs:
         uses: actions/setup-python@v6
         with:
           python-version: "3.13"
+      - name: Install Poetry
+        run: pip install poetry
+      - name: Install yamllint
+        run: poetry install --only dev
       - name: Run yamllint
         run: make yamllint
 
