Add comprehensive unit tests for core modules (#169)
* Add comprehensive unit tests for core modules

Added extensive unit tests for aws_login, file_io, saml2aws_helper, and selector modules to improve code coverage and reliability. Tests cover various edge cases, error handling, and expected behaviors for CLI commands, file operations, and helper functions.

* Update tests to use caplog for log assertions

Refactored test cases in test_aws_login.py to assert log messages using pytest's caplog fixture instead of checking result.output. Also updated a test in test_saml2aws_helper.py to expect KeyError instead of ValueError. Added junit.xml to .gitignore.

* Migrate to pyproject.toml and Makefile-based workflow

Replaces setup.py, requirements files, and tox.ini with pyproject.toml and Makefile for dependency management, testing, and building. Updates GitHub Actions workflow and README to use Makefile targets. This modernizes the project structure and simplifies development and CI processes.

* Add Python 3.13 setup and improve Makefile dependency handling

Added explicit Python 3.13 setup to the GitHub Actions workflow and removed Python 3.10 from the test matrix. Updated Makefile to check for 'uv' before running commands and made dependency installation targets depend on 'check-uv'. Added 'coverage.xml' to .gitignore.

* Create makefile-workflow.mdc

* Update Makefile and README for build and run instructions

Removed the 'run' target from the Makefile as awslogin is an interactive CLI tool. Updated the README to clarify build, install, and run steps, and improved documentation for available Makefile targets and testing commands.

* Update makefile-workflow.mdc

* Migrate from uv to Poetry for dependency management

Replaced uv with Poetry for dependency management and updated related documentation, Makefile targets, and CI workflows. Added poetry.lock, removed MANIFEST.in and constraints.txt, and updated .gitignore. Enhanced Dependabot and GitHub Actions to support

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -22,3 +22,15 @@ updates:
       time: "09:00"
       timezone: Australia/Melbourne
     open-pull-requests-limit: 1
+
+  - package-ecosystem: poetry
+    directory: "/"
+    groups:
+      all-dependencies:
+        patterns:
+          - "*"
+    schedule:
+      interval: weekly
+      time: "09:30"
+      timezone: Australia/Melbourne
+    open-pull-requests-limit: 1
