Modernize project structure and CI workflows
Adopt python-repo-template best practices: update Makefile with comprehensive targets, switch to poetry-core, add black and flake8 for code quality, and move tests to the repo root. Overhaul GitHub Actions workflows (CI, Snyk, secrets scan, stale issues), improve dependabot config, and add cursor rules for development standards. Update README, LICENSE, and CHANGELOG to reflect new structure and tooling.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,5 +1,6 @@
 version: 2
 updates:
+  # GitHub Actions dependencies
   - package-ecosystem: github-actions
     directory: "/"
     groups:
@@ -11,18 +12,7 @@ updates:
       time: "08:00"
       timezone: Australia/Melbourne
 
-  - package-ecosystem: pip
-    directory: "/"
-    groups:
-      all-dependencies:
-        patterns:
-          - "*"
-    schedule:
-      interval: weekly
-      time: "09:00"
-      timezone: Australia/Melbourne
-    open-pull-requests-limit: 1
-
+  # Python dependencies managed by Poetry
   - package-ecosystem: poetry
     directory: "/"
     groups:
@@ -31,6 +21,6 @@ updates:
           - "*"
     schedule:
       interval: weekly
-      time: "09:30"
+      time: "08:00"
       timezone: Australia/Melbourne
     open-pull-requests-limit: 1
