--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,28 @@
-name: Build and Test
+name: CI
+run-name: CI @ ${{ github.ref_name }}
 
 on:
   push:
-    paths-ignore:
-      - '**.json'
-      - '**.md'
+    branches: [main, master]
+    paths:
+      - .github/**
+      - saml2awsmulti/**
+      - Makefile
+      - poetry.lock
+      - pyproject.toml
+  pull_request:
+    branches: [main, master]
+    paths:
+      - .github/**
+      - saml2awsmulti/**
+      - Makefile
+      - poetry.lock
+      - pyproject.toml
+  workflow_dispatch:
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 defaults:
   run:
@@ -12,27 +30,35 @@ defaults:
 
 jobs:
   lint:
-    name: Run yamllint on workflows
+    name: Lint code
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
+
       - name: Set up Python
         uses: actions/setup-python@v6
         with:
           python-version: "3.13"
-      - name: Install Poetry
-        run: pip install poetry
-      - name: Install yamllint
-        run: poetry install --only dev
-      - name: Run yamllint
-        run: make yamllint
 
-  build:
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: latest
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+
+      - name: Lint YAML
+        run: make lint-yaml
+
+      - name: Lint Python
+        run: make lint-python
+
+  test:
     needs: lint
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.11", "3.12", "3.13"]
+        python-version: ["3.10", "3.11", "3.12", "3.13"]
 
     steps:
       - name: Checkout source
@@ -44,10 +70,10 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
-        run: make install-test-deps
+        run: make install-test
 
       - name: Run tests with coverage
-        run: make test-coverage
+        run: make test-with-coverage
 
       - name: Upload coverage to Codecov
         if: matrix.python-version == '3.13'
